# llm-advisors

./: .gitignore  LICENSE  README.md  agents.md  llm-advisors  pyproject.toml
src/llm_advisors_cli/: advisors.py  cli.py  config.py  conversation.py  exceptions.py  providers.py  web.py
src/llm_advisors_cli/templates/: base.html  conversation_detail.html  conversations.html  home.html
